# cargo-notch

./: CHANGELOG.md  CONFIGURATION.md  Cargo.toml  INSTALL.md  LICENSE  README.md  cliff.toml  deny.toml  dist-workspace.toml  example_action.yaml  justfile  notch.toml  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: audit.yaml  check.yaml  notch_tag.yaml  tag.yaml  test.yaml
crates/builder/: CHANGELOG.md  Cargo.toml
crates/builder/src/: main.rs
crates/cargo-notch/: CHANGELOG.md  Cargo.toml  README.md
crates/cargo-notch/src/: config.rs  lib.rs  main.rs  workspace.rs
crates/cargo-notch/src/pr/: mod.rs
crates/cargo-notch/src/tag/: mod.rs
crates/notch/: CHANGELOG.md  Cargo.toml
crates/notch/src/: error.rs  lib.rs  main.rs  workspace.rs
crates/notch/src/pr/: mod.rs
crates/notch/src/tag/: mod.rs
src/: cli.rs  cmd.rs  config.rs  init.rs  lib.rs  main.rs  package.rs  workspace.rs
src/pr/: assign.rs  auto.rs  bump.rs  git.rs  mod.rs  packages.rs  run.rs  traits.rs  tui.rs
src/tag/: mod.rs
