[package]
name = "cargo-notch"
version = "1.0.1"
edition = "2024"
description = "Version against a ground truth branch on a repo"
license = "MIT"
repository = "https://github.com/jdeinum/cargo-notch"
keywords = ["build", "cargo", "versioning", "release", "git"]
categories = ["development-tools::build-utils", "command-line-utilities"]


[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.6", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
] }
config = { version = "0.15.25", default-features = false, features = ["toml"] }
# the transport features are load-bearing: git2 0.21 ships none by default, and without them
# builds on machines lacking a system libgit2 (notably the dist release runners) produce a
# binary whose fetch/push fail with "unsupported URL protocol". vendored-openssl keeps the
# https transport working when cross-compiling (e.g. dist's aarch64-linux target).
git2 = { version = "0.21.0", features = ["ssh", "https", "vendored-openssl"] }
octocrab = { version = "0.54.0", default-features = false, features = [
    "default-client",
    "follow-redirect",
    "retry",
    "rustls",
    "rustls-aws-lc-rs",
    "jwt-aws-lc-rs",
    "timeout",
    "tracing",
] }
ratatui = "0.30.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt"] }
toml = "1.1.3"
toml_writer = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }


[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# deny handles this
multiple_crate_versions = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
