[package]
name = "cargo-notch"
version = "0.1.14"
edition = "2024"
description = "Version against a ground truth branch on a repo"
license = "MIT"
repository = "https://github.com/jdeinum/notch"
keywords = ["build", "cargo", "versioning", "release", "git"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.6", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
] }
config = { version = "0.15.25", default-features = false, features = ["toml"] }
git2 = "0.21.0"
octocrab = { version = "0.53.1", default-features = false, features = [
    "default-client",
    "follow-redirect",
    "retry",
    "rustls",
    "rustls-aws-lc-rs",
    "jwt-aws-lc-rs",
    "timeout",
    "tracing",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"


[lints]
workspace = true
