[package]
name = "notch"
version = "0.1.4"
edition = "2024"
description = "Version against a ground truth branch on a repo"
license = "MIT"
repository = "https://github.com/jdeinum/notch"
keywords = ["build", "cargo", "versioning", "release", "git"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.6", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
] }
git2 = "0.21.0"
octocrab = "0.53.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"


[lints]
workspace = true
